# kasamd-offline

./: .env.example  .gitignore
app/: index.html  package.json  pnpm-lock.yaml
app/public/: pcm-processor.js
app/src/: App.tsx  index.css
app/src-tauri/: tauri.conf.json
sidecar/: =1.24  pyproject.toml
sidecar/src/: __main__.py  config.py  pdf_generator.py  prompts.py  protocol.py  quality_gate.py  repetition_detector.py  server.py  transcript_logger.py  vad.py
sidecar/src/engines/: base.py  gemma_engine.py  medasr_mlx_engine.py  medgemma_engine.py  registry.py
sidecar/tests/: test_chunked_features.py  test_config.py  test_deid_validation.py  test_fine_grained_streaming.py  test_pdf_generator.py  test_prompts.py  test_quality_gate.py  test_repetition_detector.py  test_retranscribe.py  test_streaming_integration.py  test_transcript_logger.py  test_vad.py
templates/blood-lymph/: anemia-evaluation.md  anemia-evalulation.md  anemia-labs.md  atria.md  b-symptoms.md  cancer-pain-red-flags.md  has-bled.md  perc.md
templates/cardiovascular/: cardiovascular-basic-exam-first-attempt.md  chads2-vasc.md  chest-pain-5.md  chest-pain-6.md  chest-pain-8.md  chest-pain-assessment-1.md  chest-pain-complaint-r-o-acs-in-clinic.md  chest-pain-decision-rule-2.md  chest-pain-decision-rule.md  chest-pain-evaluation-2.md  chest-pain-evaluation.md  chest-pain-history.md  has-bled.md  heart-failure-ccm-notes.md  oesil-risk-score.md  outpatient-bleeding-risk-index-obri.md  pame-history.md  singh-risk-score.md  timi-risk-score.md
templates/chart-review/: ap-chart-review-5.md
(+483 files in other folders)
