[project]
name = "kasamd-sidecar"
version = "0.1.0"
description = "Python sidecar for KasaMD — MedASR and Gemma engine host"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "mlx>=0.20",
    "mlx-audio>=0.4.0",
    "mlx-lm>=0.25",
    "mlx-vlm>=0.3.9",
    "numpy>=1.24",
    "pyctcdecode @ git+https://github.com/mediacatch/pyctcdecode.git@ff49fc56",
    "camel-kenlm",
    "anthropic>=0.84.0",
    "google-genai>=1.67.0",
    "onnxruntime>=1.24",
    "pymupdf>=1.24",
    "pysbd>=0.3.4",
]

[tool.uv]
prerelease = "allow"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
kasamd-sidecar = "sidecar.src.server:main"
